# freenet-test-network

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
examples/: basic.rs  docker_nat.rs  minimal_nat_test.rs  nat_hole_punch_diagnostic.rs  remote_peer.rs  ring_viz.rs  view_logs.rs
scripts/: aggregate-logs.sh  cleanup-docker-nat.sh  network-status.sh  trace-tx.sh
src/: binary.rs  builder.rs  docker.rs  lib.rs  logs.rs  network.rs  peer.rs  process.rs  remote.rs
tests/: smoke_test.rs
