[package]
name = "freenet-test-network"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-only"
description = "Reliable test network infrastructure for Freenet"
repository = "https://github.com/freenet/freenet-test-network"
keywords = ["freenet", "testing", "p2p", "network"]
categories = ["development-tools::testing"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
anyhow = "1"
thiserror = "1"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
which = "8.0.0"
sysinfo = "0.37.2"

[dev-dependencies]
testresult = "0.4"
tracing-subscriber = "0.3"
