[package]
name = "freenet-test-network"
version = "0.1.10"
edition = "2021"
license = "LGPL-3.0-only"
description = "Reliable test network infrastructure for Freenet"
repository = "https://github.com/freenet/freenet-test-network"
keywords = ["freenet", "testing", "p2p", "network"]
categories = ["development-tools::testing"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
which = "8.0.0"
sysinfo = "0.37.2"
futures = "0.3.31"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
freenet-stdlib = { version = "0.1.23", features = ["net"] }
regex = "1"
ssh2 = "0.9"
bollard = "0.18"
ipnetwork = "0.20"
rand = "0.8"
tar = "0.4"

[dev-dependencies]
testresult = "0.4"
tracing-subscriber = "0.3"
humantime-serde = "1"
